methods.picture.PictureMono3.scala.error
Compilation error:
PictureMono3:10: error: expected class or object definition
def faireMotifPrep() {
^PictureMono3:19: error: expected class or object definition
def faireV(){
^PictureMono3:41: error: expected class or object definition
def faireMotifL(){
^PictureMono3:57: error: Unmatched closing brace '}' ignored here
}
^